// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match custom snapshot 1`] = `
<div>
  <div
    class="nut-overlay"
    style="background-color: rgba(0, 0, 0, 0); --nutui-overlay-zIndex: 9999;"
  />
  <div
    class="nut-popup nut-popup-round nut-popup-bottom"
    style="z-index: 9999;"
  >
    <div
      class="nut-numberkeyboard"
    >
      <div
        class="nut-numberkeyboard-body"
      >
        <div
          class="nut-numberkeyboard-body-keys"
        >
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                1
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                2
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                3
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                4
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                5
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                6
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                7
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                8
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                9
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                .
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                0
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                x
              </div>
            </div>
          </div>
        </div>
        <div
          class="nut-numberkeyboard-sidebar"
        >
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key delete"
            >
              <svg
                height="28"
                viewBox="0 0 1024 1024"
                width="28"
              >
                <path
                  d="M875.594 186.122H390.803a51.162 51.162 0 0 0-36.18 14.986L79.91 475.821a51.166 51.166 0 0 0 0 72.358l274.714 274.712a51.164 51.164 0 0 0 36.179 14.986h484.791c46.033 0 83.484-37.45 83.484-83.483V269.606c.001-46.033-37.45-83.484-83.483-83.484zm32.32 568.274c0 17.85-14.473 32.318-32.32 32.318H390.803L116.089 512l274.714-274.714h484.791c17.849 0 32.32 14.47 32.32 32.32v484.789z"
                  fill="currentColor"
                />
                <path
                  d="M753.945 360.214l-121.43 121.429-121.43-121.429s-16.062-8.224-30.356 6.072c-14.295 14.295-6.073 30.357-6.073 30.357l121.43 121.428L486.8 627.357s-8.222 16.062 6.072 30.357c14.297 14.296 30.358 6.072 30.358 6.072l109.286-109.285 109.286 109.285s16.062 8.224 30.357-6.072c14.295-14.295 6.07-30.357 6.07-30.357L668.944 518.072l121.431-121.43s8.22-16.061-6.074-30.356c-14.294-14.296-30.356-6.072-30.356-6.072z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key confirm"
            >
              完成
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should match snapshot 1`] = `
<div>
  <div
    class="nut-overlay"
    style="background-color: rgba(0, 0, 0, 0); --nutui-overlay-zIndex: 9999;"
  />
  <div
    class="nut-popup nut-popup-round nut-popup-bottom"
    style="z-index: 9999;"
  >
    <div
      class="nut-numberkeyboard"
    >
      <div
        class="nut-numberkeyboard-body"
      >
        <div
          class="nut-numberkeyboard-body-keys"
        >
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                1
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                2
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                3
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                4
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                5
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                6
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                7
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                8
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                9
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key close"
            >
              <svg
                aria-labelledby="ArrowDown"
                class="nut-icon nut-icon-ArrowDown "
                role="presentation"
                style="width: 18px; height: 18px;"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M158.17 289.83a42.67 42.67 0 1 0-60.34 60.34l384 384a42.67 42.67 0 0 0 60.36 0l384-384a42.67 42.67 0 1 0-60.36-60.34L512 643.67z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key"
            >
              <div>
                0
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard-body-wrapper"
          >
            <div
              class="key delete"
            >
              <svg
                height="28"
                viewBox="0 0 1024 1024"
                width="28"
              >
                <path
                  d="M875.594 186.122H390.803a51.162 51.162 0 0 0-36.18 14.986L79.91 475.821a51.166 51.166 0 0 0 0 72.358l274.714 274.712a51.164 51.164 0 0 0 36.179 14.986h484.791c46.033 0 83.484-37.45 83.484-83.483V269.606c.001-46.033-37.45-83.484-83.483-83.484zm32.32 568.274c0 17.85-14.473 32.318-32.32 32.318H390.803L116.089 512l274.714-274.714h484.791c17.849 0 32.32 14.47 32.32 32.32v484.789z"
                  fill="currentColor"
                />
                <path
                  d="M753.945 360.214l-121.43 121.429-121.43-121.429s-16.062-8.224-30.356 6.072c-14.295 14.295-6.073 30.357-6.073 30.357l121.43 121.428L486.8 627.357s-8.222 16.062 6.072 30.357c14.297 14.296 30.358 6.072 30.358 6.072l109.286-109.285 109.286 109.285s16.062 8.224 30.357-6.072c14.295-14.295 6.07-30.357 6.07-30.357L668.944 518.072l121.431-121.43s8.22-16.061-6.074-30.356c-14.294-14.296-30.356-6.072-30.356-6.072z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
